@@ -1,3 +1,10 @@
+Fri Aug 20 14:44:41 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+        * tao/Transport_Cache_Manager_T.inl:
+        * tao/Transport_Cache_Manager_T.cpp:
+          Moved check for null entry outside lock.
+	  Optimization. Resolves Bugzilla #3659.
+
 Thu Aug 19 10:11:41 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * docs/idltocpp0x/IDLC++0xRFP.odt:
